Made tables on article pages scrollable, to fix display bug where they were horizontally overflowing into the nav area.

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -183,6 +183,7 @@ html,body{
 		@extend .box;
 		border: 1px solid $black-0;
 		padding: 0px!important;
+        overflow:auto;
 		table{
 			caption{
 				background: $gray-1;
